# creativecamera

./: .gitignore  Dockerfile  README.md  docker-compose.usb-camera.yml  docker-compose.yml  package.xml  setup.cfg  setup.py
config/: params.yaml
launch/: camera_and_detectors.launch.py
ros2_ws/src/ei_fetcher/: package.xml  setup.cfg  setup.py
ros2_ws/src/ei_fetcher/config/: params.yaml
ros2_ws/src/ei_fetcher/ei_fetcher/: __init__.py  ball_tracker_rgb.py  detection_overlay.py  overlay_fused.py  people_detector.py  video_publisher.py
ros2_ws/src/ei_fetcher/launch/: camera_and_detectors.launch.py
src/mecanumbot_camera/: __init__.py  ball_follower.py  detection_overlay.py  people_detector.py  video_publisher.py
