<?xml version="1.0"?>
<package format="3">
  <name>ei_fetcher</name>
  <version>0.1.0</version>
  <description>CreativeCamera detectors: tennis ball (HSV RGB) + people (YOLO ONNX) for ROS 2 Humble.</description>
  <maintainer email="yc8eu4@inf.elte.hu">Mugambi Timothy Mwenda</maintainer>
  <maintainer email="newageson@inf.elte.hu">Roland Sándor Nagy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>foxglove_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
